@@ -23,7 +23,6 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.sonar.api.batch.fs.InputFile;
 
 /**
@@ -114,7 +113,7 @@ class AverageLineLengthCalculator {
         new InputStreamReader(file.inputStream(), file.charset())
       )
     ) {
-      return reader.lines().collect(Collectors.toList());
+      return reader.lines().toList();
     } catch (IOException e) {
       throw new IllegalStateException("Unable to read file " + file.uri(), e);
     }
